xls cells have all hard number format, fdo#66506

Change-Id: Ia2dd206bd1e9a91bef0021a9317f0d6486b2f276
(cherry picked from commit f45c47af72369859d1937cb8b46cba370031509a)