sc/source/filter/excel/excform.cxx
@@ -139,6 +139,7 @@ void ImportExcel::Formula(
 
         if (pCell)
         {
+            pCell->SetNeedNumberFormat(false);
             if( eErr != ConvOK )
                 ExcelToSc::SetError( *pCell, eErr );
 
